# ardak

./: CMakeLists.txt  README.md  package.xml
config/: Cameras.yaml  DriveController.yaml  Navigation.yaml  SimParamBridge.yaml  States.yaml  cross_compile.yaml  ekf.yaml  localization.yaml
description/: ardak_description.urdf  convert.sh  model.urdf
description/ardak/: ardak.gazebo  ardak.urdf  depth_camera_sensor.sdf  gps.sdf  imu.sdf  model.config  model.sdf  model.urdf  model_urdf.urdf  realsense_camera.sdf
description/red_bean_bag/: model.config  model.sdf
include/: ardak_node.h  ardak_node.hpp  drive_controller_node.hpp  input_calibration.hpp  input_calibration_node.h  input_calibration_node.hpp  joint_state_publisher.hpp  outputCalibration.h  output_calibration_node.hpp
launch/: ardak.launch.py  ardak.launch.py.bak  ardak.py  ardak_localization.launch.py  ardak_localization.launch.py.old  ardak_odom.launch.py  ardak_realsense.launch.py  ardak_ros_localization.launch.py  ardak_simulation.launch.py  ardak_tftree.launch.py  ardak_urdf_viz.launch.py  drive_controller.launch.py  drive_controller.py  input_caibration.py  navigation.launch.py  output_calibration.launch.py  pointcloud_to_laserscan.launch.py  rs_ardak.launch.py  rs_launch.py  rs_multi_camera_launch.py  slam_online_sync.launch.py
launch/gz11/: ardak.launch.gz11.py  ardak_simulation.launch.py
rviz/: nav_config.rviz
scripts/: convert_ardak_model.sh
src/: ardak_node.cpp  drive_controller_node.cpp  input_calibration_node.cpp  joint_state_publisher.cpp  main.cpp  output_calibration.cpp  output_calibration_node.cpp  robot_states.cpp
src/description/: ardak_description.urdf
world/: ardak_world.sdf  facility_with_ramp.sdf  smalltown.world  testworld.sdf
world/Gazebo_Fortress/: basic_world.sdf
world/gz11/: facility_with_ramp.sdf  solver_type.sdf  testworld.sdf
