<?xml version="1.0"?>
<package format="2">
  <name>ardak</name>
  <version>0.0.0</version>
  <description>Unmanned Ground Vehicle (UGV) capable of setting and achieving location setpoints.</description>

  <maintainer email="nickskinner@blackfoxrobotics.co">Nick Skinner</maintainer>

  <license>BSD</license>

  <!-- <url type="website"></url> -->

  <author email="nickskinner@blackfoxrobotics.co">Nick Skinner</author> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>bfr_base</depend>
  <depend>bfr_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
